# VoicepeakWrapper

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release-on-new-change.yml
test/: sample.txt  test_voicepeak.py
voicepeak_wrapper/: __init__.py  voicepeak.py
