[project]
name = "voicepeak_wrapper"
version = "1.1"
description = "VOICEPEAKの非公式ラッパーです。詳しくはHomepage(Github)をご覧ください"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nanahuse" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Nanahuse/VoicepeakWrapper"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "flake8", "black", "isort", "mypy"]

[tool.black]
line-length = 120
