[project]
name = "voicepeak_wrapper"
version = "1.1.1"
description = "VOICEPEAKの非公式ラッパーです。詳しくはHomepage(Github)をご覧ください"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nanahuse" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Nanahuse/VoicepeakWrapper"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "ty>=0.0.9",
]
