[project]
name = "voicepeak_wrapper"
version = "1.1.1"
description = "VOICEPEAKの非公式ラッパーです。詳しくはHomepage(Github)をご覧ください"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nanahuse" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Nanahuse/VoicepeakWrapper"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "ty>=0.0.9",
]

[tool.ruff]
line-length = 120
lint.fixable = ["ALL"]
lint.select = ["ALL"]
lint.ignore = [
    "A002",
    "EM101",
    "EM102",
    "FIX002",
    "S101",
    "TRY003",
    "TRY300",
    "COM812",
    "RUF002",
    "D",
    "TD",
]

[tool.ruff.per-file-ignores]
"test/*" = ["INP001", "PLR2004", "SLF001"]
